# view_selection_tool_python

./: .flake8  .gitignore  .gitlab-ci.yml  README.md  noxfile.py  pyproject.toml
src/view_selection_python/: CLI.py  ConfigCostEstimator.py  ConfigurationGenerator.py  CostEstimator.py  CostEstimatorSinglePlan.py  CwdChecker.py  DbtProjectScraper.py  DistanceCalculator.py  FudgeFactorCalculator.py  MAX_MODELS_TO_MATERIALIZE.py  ModelInfoManager.py  OutputPrinter.py  PostgresHandler.py  ProfilesScraper.py  SQLRewriter.py  ViewSelectionAdvisor.py  YamlScraper.py  __init__.py  console.py  main.py
src/view_selection_python/Exceptions/: errors.py  warnings.py
